{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 379,
  "lineage": "c81e58f0-eba4-1b90-6a50-a345b44c9a3f",
  "resources": [
    {
      "module": "module.cluster-eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946635677:security-group/sg-071ac594c832e7e33",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-071ac594c832e7e33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "eks-darede-edu-sg-edu",
            "name_prefix": "",
            "owner_id": "307946635677",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b48aaac58dde68af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.darede_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "darede_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946635677:internet-gateway/igw-00126ff9423658046",
            "id": "igw-00126ff9423658046",
            "owner_id": "307946635677",
            "tags": {
              "Name": "darede-igw-edu"
            },
            "tags_all": {
              "Name": "darede-igw-edu"
            },
            "vpc_id": "vpc-0b48aaac58dde68af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.darede_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946635677:route-table/rtb-057238832efc06347",
            "id": "rtb-057238832efc06347",
            "owner_id": "307946635677",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00126ff9423658046",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b48aaac58dde68af"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.darede_igw",
            "module.vpc.aws_vpc.darede_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c65350a23c749eb9",
            "route_table_id": "rtb-057238832efc06347",
            "subnet_id": "subnet-0a2dade3cb8f2db5e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.darede_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.darede_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0861bebe6341b7221",
            "route_table_id": "rtb-057238832efc06347",
            "subnet_id": "subnet-0001050b54456f8ec"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.darede_igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.darede_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946635677:subnet/subnet-0bc4a91670b4a5ee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc4a91670b4a5ee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946635677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b48aaac58dde68af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.darede_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946635677:subnet/subnet-0051262ef6fcdfd75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0051262ef6fcdfd75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946635677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b48aaac58dde68af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.darede_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946635677:subnet/subnet-0a2dade3cb8f2db5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2dade3cb8f2db5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946635677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b48aaac58dde68af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.darede_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946635677:subnet/subnet-0001050b54456f8ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0001050b54456f8ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946635677",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b48aaac58dde68af"
          },
          "dependencies": [
            "module.vpc.aws_vpc.darede_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "darede_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946635677:vpc/vpc-0b48aaac58dde68af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0809d8247385a345d",
            "default_route_table_id": "rtb-0fe8be0cf6eecf94e",
            "default_security_group_id": "sg-0e05d253eaeb4a302",
            "dhcp_options_id": "dopt-08f52917b7176dac4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b48aaac58dde68af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe8be0cf6eecf94e",
            "owner_id": "307946635677",
            "tags": {
              "Name": "darede-vpc-edu"
            },
            "tags_all": {
              "Name": "darede-vpc-edu"
            }
          }
        }
      ]
    }
  ]
}